@@ -1,3 +1,8 @@
+2012-10-12  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86/bits/byteswap.h: Include <bits/types.h>.
+	(__bswap_64): __uint64_t for unsigned 64-bit int.
+
 2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>
 
 	[BZ #14042]
